--- a/varda-rekisterointi/package.json
+++ b/varda-rekisterointi/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
     "@opetushallitus/virkailija-ui-components": "^0.3.4",
+    "@tanstack/react-table": "^8.5.13",
     "axios": "^0.24.0",
     "axios-hooks": "^1.11.0",
     "classnames": "^2.2.6",
@@ -26,11 +27,11 @@
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "styled-components": "^4.4.0",
-    "typescript": "^3.9.6",
     "universal-cookie": "^4.0.2",
     "use-debounce": "^3.1.0"
   },
   "devDependencies": {
+    "typescript": "^4.3.5",
     "@types/classnames": "^2.2.9",
     "@types/jest": "24.0.23",
     "@types/lodash": "^4.14.149",
@@ -41,7 +42,8 @@
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "5.1.3",
     "@types/react-select": "3.0.8",
-    "@types/styled-components": "4.4.0"
+    "@types/styled-components": "4.4.0",
+    "prettier": "^2.7.1"
   },
   "scripts": {
     "start": "HTTPS=true PORT=8080 react-scripts start",
