--- a/varda-rekisterointi/.github/workflows/build.yml
+++ b/varda-rekisterointi/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
       - '*'
       - '!**.md'
   pull_request:
+
     paths:
       - '*'
       - '!**.md'
@@ -16,6 +17,11 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
+      - name: Set up node 16
+        uses: actions/setup-node@v3
+          with:
+            node-version: 16
+            cache: 'npm'
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
