Bäkkärin testit korjattu.

--- a/varda-rekisterointi/pom.xml
+++ b/varda-rekisterointi/pom.xml
@@ -167,6 +167,10 @@
             <artifactId>swagger-annotations</artifactId>
             <version>${swagger.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
