--- a/varda-rekisterointi/package.json
+++ b/varda-rekisterointi/package.json
@@ -9,10 +9,10 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
-    "@opetushallitus/virkailija-ui-components": "^0.3.4",
+    "@opetushallitus/virkailija-ui-components": "^0.4.7",
     "@tanstack/react-table": "^8.5.13",
-    "axios": "^0.24.0",
-    "axios-hooks": "^1.11.0",
+    "axios": "^0.27.2",
+    "axios-hooks": "^4.0.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.7.0",
     "email-validator": "^2.0.4",
@@ -26,12 +26,12 @@
     "react-router-dom": "^5.1.1",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
-    "styled-components": "^4.4.0",
+    "styled-components": "^5.3.6",
     "universal-cookie": "^4.0.2",
     "use-debounce": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^4.3.5",
+    "typescript": "^4.8.3",
     "@types/classnames": "^2.2.9",
     "@types/jest": "24.0.23",
     "@types/lodash": "^4.14.149",
@@ -44,6 +44,11 @@
     "@types/react-select": "3.0.8",
     "@types/styled-components": "4.4.0",
     "prettier": "^2.7.1"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^4.8.3"
+    }
   },
   "scripts": {
     "start": "HTTPS=true PORT=8080 react-scripts start",
