--- a/varda-rekisterointi/package.json
+++ b/varda-rekisterointi/package.json
@@ -20,35 +20,27 @@
     "mdi-react": "^6.2.0",
     "normalize.css": "^8.0.1",
     "oph-virkailija-style-guide": "github:Opetushallitus/virkailija-styles#master",
-    "react": "^16.11.0",
     "react-datepicker": "^2.9.6",
-    "react-dom": "^16.11.0",
-    "react-router-dom": "^5.1.1",
-    "react-scripts": "^3.3.0",
+    "react-router": "^5.3.3",
+    "react-router-dom": "^5.3.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^3.0.8",
     "styled-components": "^5.3.6",
     "universal-cookie": "^4.0.2",
     "use-debounce": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^4.8.3",
-    "@types/classnames": "^2.2.9",
-    "@types/jest": "24.0.23",
+    "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.149",
-    "@types/node": "12.12.14",
-    "@types/react": "16.9.13",
+    "@types/node": "^16",
     "@types/react-beforeunload": "^2.1.0",
     "@types/react-datepicker": "2.9.5",
-    "@types/react-dom": "16.9.4",
-    "@types/react-router-dom": "5.1.3",
+    "@types/react-router": "^5.1.19",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "3.0.8",
-    "@types/styled-components": "4.4.0",
-    "prettier": "^2.7.1"
-  },
-  "overrides": {
-    "react-scripts": {
-      "typescript": "^4.8.3"
-    }
+    "@types/styled-components": "5.1.26",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "start": "HTTPS=true PORT=8080 react-scripts start",
