Korjattu kutsuprosessi toimimaan oikein Jotpa rekisteröinneissä, eli niin että nyt sinne menee ympäristömuuttuja kayttooikeus_ryhma_jotpa, joka pitää löytyä jatkossa ympäristön cloud-environment repon ympäristömuuttujista, ja sen pitää matchata Jotpa-käyttöoikueusryhmän id:hen. Vielä jää määriteltäväksi että mitä oikeuksia tuon pitäisi sisältää.

--- a/varda-rekisterointi/oph-configuration/varda-rekisterointi.yml.template
+++ b/varda-rekisterointi/oph-configuration/varda-rekisterointi.yml.template
@@ -47,6 +47,7 @@ varda-rekisterointi:
             paivakoti: {{ kayttooikeus_ryhma_paivakoti }}
             ryhmaperhepaivakoti: {{ kayttooikeus_ryhma_ryhmaperhepaivakoti }}
             perhepaivahoitaja: {{ kayttooikeus_ryhma_perhepaivahoitaja }}
+            jotpa: {{ kayttooikeus_ryhma_jotpa }}
     swagger:
         enabled: {{ varda_rekisterointi_swagger_enabled | default('false') }}
     rekisterointi-ui:
