--- a/varda-rekisterointi/src/main/resources/application.yml
+++ b/varda-rekisterointi/src/main/resources/application.yml
@@ -39,6 +39,7 @@ varda-rekisterointi:
       paivakoti: 70008488
       ryhmaperhepaivakoti: 70008504
       perhepaivahoitaja: 70008477
+      jotpa: 1224455
   rekisterointi-ui:
     username: varda-rekisterointi
     password: varda-rekisterointi
