--- a/varda-rekisterointi/src/main/resources/varda-rekisterointi-oph.properties
+++ b/varda-rekisterointi/src/main/resources/varda-rekisterointi-oph.properties
@@ -24,10 +24,10 @@ kayttooikeus-service.kutsu=${url-virkailija}/kayttooikeus-service/kutsu
 
 organisaatio-service.vtj.ytunnus=${url-virkailija}/organisaatio-service/rest/ytj/$1/v4
 organisaatio-service.login=${url-virkailija}/organisaatio-service/j_spring_cas_security_check
-organisaatio-service.organisaatio.v4=${url-virkailija}/organisaatio-service/rest/organisaatio/v4
-organisaatio-service.organisaatio.v4.byOid=${url-virkailija}/organisaatio-service/rest/organisaatio/v4/$1
-organisaatio-service.organisaatio.v4.byYtunnus=${url-virkailija}/organisaatio-service/rest/organisaatio/v4/$1
-organisaatio-service.organisaatio.v4.hae=${url-virkailija}/organisaatio-service/rest/organisaatio/v4/hae
+organisaatio-service.organisaatio.api=${url-virkailija}/organisaatio-service/rest/organisaatio/api
+organisaatio-service.organisaatio.api.byOid=${url-virkailija}/organisaatio-service/rest/organisaatio/api/$1
+organisaatio-service.organisaatio.api.byYtunnus=${url-virkailija}/organisaatio-service/rest/organisaatio/api/$1
+organisaatio-service.organisaatio.api.hae=${url-virkailija}/organisaatio-service/rest/organisaatio/api/hae
 
 koodisto-service.koodi=${url-virkailija}/koodisto-service/rest/json/$1/koodi
 
