OH-854 fiksattu testidata

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -64,3 +64,4 @@ url-ytj=https://tietopalvelu.ytj.fi/yritystiedot.asmx
 
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
+spring.jpa.show-sql=false
