--- a/varda-rekisterointi/package.json
+++ b/varda-rekisterointi/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "react-select": "^3.0.8",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
     "universal-cookie": "^4.0.2",
     "use-debounce": "^3.1.0"
