--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,11 +82,14 @@ jobs:
         with:
           arguments: clean build -x test -x uiTest -x lint -x checkFormatting
       - name: Run Cypress
-        run: |
-          cd mock-api && npm run mock-api &
-          java -jar -Xms2g -Xmx2g -Dspring.config.location=classpath:application.properties -Dspring.profiles.active=dev -Dspring.flyway.enabled=true -Durl-virkailija=http://localhost:9000 -Dhost.virkailija=localhost:9000 -Durl-ytj=http://localhost:9000/ytj -Durl-oidservice=http://localhost:9000/oidservice -Dcas.service.organisaatio-service=http://localhost:8080/organisaatio-service-not-available organisaatio-service/build/libs/organisaatio-service.jar &
-          cd organisaatio-ui && npm run cypress:ci && cd -
-          kill $(jobs -p) || true
+        uses: cypress-io/github-action@v4
+        with:
+          start: |
+            cd mock-api && npm run mock-api &
+            java -jar -Xms2g -Xmx2g -Dspring.config.location=classpath:application.properties -Dspring.profiles.active=dev -Dspring.flyway.enabled=true -Durl-virkailija=http://localhost:9000 -Dhost.virkailija=localhost:9000 -Durl-ytj=http://localhost:9000/ytj -Durl-oidservice=http://localhost:9000/oidservice -Dcas.service.organisaatio-service=http://localhost:8080/organisaatio-service-not-available organisaatio-service/build/libs/organisaatio-service.jar &
+            cd organisaatio-ui && npm run start
+          wait-on: "http://localhost:3003/organisaatio-service"
+          command: cd organisaatio-ui && npm run cypress:ci && cd -
   sonarcloud:
     needs: [cypress]
     runs-on: ubuntu-latest
