Jotpa organisaation ja sen aliorganisaation luonti logiikkaa.

--- a/varda-rekisterointi/src/main/resources/varda-rekisterointi-oph.properties
+++ b/varda-rekisterointi/src/main/resources/varda-rekisterointi-oph.properties
@@ -26,6 +26,7 @@ organisaatio-service.vtj.ytunnus=${url-virkailija}/organisaatio-service/rest/ytj
 organisaatio-service.login=${url-virkailija}/organisaatio-service/j_spring_cas_security_check
 organisaatio-service.organisaatio.api=${url-virkailija}/organisaatio-service/api/
 organisaatio-service.organisaatio.api.byOid=${url-virkailija}/organisaatio-service/api/$1
+organisaatio-service.organisaatio.api.jalkelaisetByOid=${url-virkailija}/organisaatio-service/api/$1/jalkelaiset
 organisaatio-service.organisaatio.api.byYtunnus=${url-virkailija}/organisaatio-service/api/$1
 organisaatio-service.organisaatio.api.hae=${url-virkailija}/organisaatio-service/api/hae
 
