--- a/organisaatio-api/build.gradle
+++ b/organisaatio-api/build.gradle
@@ -10,6 +10,9 @@ dependencies {
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.3.3'
 	compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'
 	compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 publishing {
