Korjattu kutsuprosessia niin että rekisteröintipalvelu hakee kutsujan lokalisaatiopalvelusta.

--- a/varda-rekisterointi/src/main/resources/varda-rekisterointi-oph.properties
+++ b/varda-rekisterointi/src/main/resources/varda-rekisterointi-oph.properties
@@ -33,6 +33,7 @@ organisaatio-service.organisaatio.api.hae=${url-virkailija}/organisaatio-service
 koodisto-service.koodi=${url-virkailija}/koodisto-service/rest/json/$1/koodi
 
 lokalisointi.v1.listByCategory=${url-virkailija}/lokalisointi/cxf/rest/v1/localisation?category=$1
+lokalisointi.v1.kutsujaForEmail=${url-virkailija}/lokalisointi/cxf/rest/v1/localisation?category=$1&key=$2&locale=$3
 
 ryhmasahkoposti-service.login=${url-virkailija}/ryhmasahkoposti-service/j_spring_cas_security_check
 ryhmasahkoposti-service.email=${url-virkailija}/ryhmasahkoposti-service/email?sanitize=$1
