--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -60,7 +60,7 @@ spring.datasource.hikari.maximumPoolSize=20
 root.organisaatio.oid=1.2.246.562.10.00000000001
 ryhmasahkoposti.service.email=
 url-virkailija=https://${host.virkailija}
-url-ytj=https://tietopalvelu.ytj.fi/yritystiedot.asmx
+url-ytj=https://api.tietopalvelu.ytj.fi/yritystiedot.asmx
 
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
