add a task to send a generic email for unhandled registrations

--- a/varda-rekisterointi/oph-configuration/varda-rekisterointi.yml.template
+++ b/varda-rekisterointi/oph-configuration/varda-rekisterointi.yml.template
@@ -36,6 +36,7 @@ varda-rekisterointi:
         password: {{ varda_rekisterointi_service_password }}
     schedule:
         kunta-email-task: {{ varda_rekisterointi_schedule_kunta_email_task | default('DAILY|06:00') }}
+        kasittelyssa-email-task: {{ varda_rekisterointi_schedule_kasittelyssa_email_task | default('DAILY|06:30') }}
         raportoi-epaonnistumiset-task: {{ varda_rekisterointi_schedule_raportoi_epaonnistumiset_task | default('DAILY|07:00') }}
     valtuudet:
         host: {{ varda_rekisterointi_valtuudet_host }}
