--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'application'
     id "org.flywaydb.flyway" version "6.5.7"
 }
-
+sourceCompatibility = '11'
 ext {
     queryDslVersion = '4.4.0'
     junitVersion = '5.6.2'
