OH-927 remove unit test dependency on untuva koodisto service

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -87,10 +87,10 @@ spring.flyway.enabled=false
 
 spring.messages.basename=Messages
 
-host.virkailija=virkailija.untuvaopintopolku.fi
+host.virkailija=virkailija.foo.fi
 url-virkailija=https://${host.virkailija}
-url-ytj=https://tietopalvelu.ytj.fi
-host.alb=https://virkailija.untuvaopintopolku.fi
+url-ytj=https://tietopalvelu.foo.fi
+host.alb=https://virkailija.foo.fi
 
 server.servlet.context-path=/organisaatio-service
 server.swagger.context-path=/swagger-ui
@@ -101,7 +101,7 @@ server.api.context-path=/api
 cas.service=http://localhost:${server.port}/organisaatio-service
 cas.send-renew=false
 cas.key=organisaatio-service
-cas.url=virkailija.untuvaopintopolku.fi
+cas.url=virkailija.foo.fi
 
 dev.username=ophadmin
 dev.password=password
