--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.12.RELEASE'
+    id 'org.springframework.boot' version '2.5.14'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'java'
     id 'jacoco'
