OH-927 spring-boot version --> 2.6.13

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -82,7 +82,8 @@ port.tarjonta-service=443
 port.organisaatio-service=443
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+spring.main.allow-circular-references=true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.flyway.enabled=false
 
 spring.messages.basename=Messages
