--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     compile group: 'org.springframework.security', name: 'spring-security-cas', version: '5.3.0.RELEASE'
 
 
