--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+    compile group: 'org.springframework.session', name: 'spring-session-jdbc'
     compile group: 'org.springframework.security', name: 'spring-security-cas', version: '5.3.0.RELEASE'
 
 
