--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -22,6 +22,7 @@ organisaatio.ui.ilmoitukset.url=${organisaatio.ui.url}/ilmoitukset
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.main.allow-circular-references=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.session.store-type=jdbc
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.table=schema_version_history
