OH-930 migrate from kagkarlsson to normal spring-boot scheduled

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -52,7 +52,8 @@ organisaatio.service.username=xxx
 organisaatio.service.password=xxx
 organisaatio.service.username.to.koodisto=
 organisaatio.service.password.to.koodisto=
-organisaatio-service.scheduled.update.cron.expression= 0 0 0 * * ?
+organisaatio-service.scheduled.organisaatio_update_task.cron.expression= 0 0 0 * * ?
+organisaatio-service.scheduled.vanhentuneet_tiedot_sahkoposti_task.cron.expression= 0 0 8 * * MON-FRI
 organisaatio.service.username.to.viestinta=
 organisaatio.service.password.to.viestinta=
 spring.datasource.url=jdbc:postgresql://localhost:5432/organisaatio
