--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -53,7 +53,7 @@ organisaatio.service.password=xxx
 organisaatio.service.username.to.koodisto=
 organisaatio.service.password.to.koodisto=
 organisaatio-service.scheduled.organisaatio_update_task.cron.expression= 0 0 0 * * ?
-organisaatio-service.scheduled.vanhentuneet_tiedot_sahkoposti_task.cron.expression= 0 0 8 * * MON-FRI
+organisaatio-service.scheduled.vanhentuneet_tiedot_sahkoposti_task.cron.expression= */30 * * * * MON-FRI
 organisaatio.service.username.to.viestinta=
 organisaatio.service.password.to.viestinta=
 spring.datasource.url=jdbc:postgresql://localhost:5432/organisaatio
