--- a/organisaatio-api/build.gradle
+++ b/organisaatio-api/build.gradle
@@ -4,12 +4,9 @@ plugins {
 }
 
 dependencies {
-	implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.3.0.RELEASE'
-	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
-	compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.3.3'
-	compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'
-	compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+	implementation ('org.springdoc:springdoc-openapi-ui:1.6.13'){
+
+	}
 
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
