OH-957 Add spring-security Authentication to scheduled jobs

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -48,6 +48,7 @@ cas.key=organisaatio-service
 
 cas.url=virkailija.untuvaopintopolku.fi
 host.virkailija=localhost:9000
+organisaatio.serviceuser.oid=1.2.246.562.24.47727091944
 organisaatio.service.username=xxx
 organisaatio.service.password=xxx
 organisaatio.service.username.to.koodisto=
