--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -50,6 +50,7 @@ koodisto.public.webservice.url.backend=http://localhost:8503/koodisto-service/se
 
 organisaatio-service.tarjonta-service.rest.url=https://localhost:8090/tarjonta-service/rest
 organisaatio-service.koodisto-service.rest.url=https://localhost:8503/koodisto-service
+organisaatio.serviceuser.oid=1.2.246.562.24.47727091944
 organisaatio.service.username=username
 organisaatio.service.password=password
 organisaatio.service.username.to.koodisto=username
