OH-957 Add organisaatio service user oid config

--- a/src/main/resources/oph-configuration/organisaatio.properties.template
+++ b/src/main/resources/oph-configuration/organisaatio.properties.template
@@ -23,6 +23,7 @@ rajapinnat.ytj.avain={{rajapinnat_ytj_avain}}
 server.name={{ansible_hostname}}
 organisaatio.service.username={{organisaatio_service_username}}
 organisaatio.service.password={{organisaatio_service_password}}
+organisaatio.service.oid={{organisaatio_service_oid}}
 organisaatio.service.username.to.koodisto={{organisaatio_service_username_to_koodisto}}
 organisaatio.service.password.to.koodisto={{organisaatio_service_password_to_koodisto}}
 organisaatio-service.scheduled.update.cron.expression=0 0 1 * * ?
