OH-945 Add feature flag for toggling organisaatio name masking

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -67,3 +67,5 @@ url-ytj=https://api.tietopalvelu.ytj.fi/yritystiedot.asmx
 
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
+
+feature.name-masking=false
