--- a/rekisterointi/pom.xml
+++ b/rekisterointi/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.2</version>
+		<version>2.7.11</version>
 		<relativePath/>
 	</parent>
 	<groupId>fi.vm.sade</groupId>
@@ -13,11 +13,23 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rekisterointi</name>
 	<description>Rekisteröintipalvelu</description>
+	<profiles>
+		<profile>
+			<id>ci</id>
+		</profile>
+		<profile>
+			<id>dev</id>
+		</profile>
+		<profile>
+			<id>test</id>
+		</profile>
+	</profiles>
 	<properties>
 		<sonar.organization>opetushallitus</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.coverage.jacoco.xmlReportPaths>**/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<java.version>11</java.version>
+		<spring-security.version>5.8.3</spring-security.version>
 	</properties>
 	<dependencies>
 		<dependency>
