OH-970 combine dev and ci profiles

--- a/rekisterointi/src/main/resources/rekisterointi-oph-dev.properties
+++ b/rekisterointi/src/main/resources/rekisterointi-oph-dev.properties
@@ -2,9 +2,12 @@ url-oppija=https://untuvaopintopolku.fi
 url-virkailija=https://virkailija.untuvaopintopolku.fi
 url-rekisterointi=http://localhost:3000
 
-rekisterointi.valtuudet.host=https://asiointivaltuustarkastus.test.suomi.fi
 rekisterointi.service.username=dummy
 rekisterointi.service.password=dummy
+rekisterointi.valtuudet.host=https://asiointivaltuustarkastus.test.suomi.fi
+rekisterointi.valtuudet.api-key=dummy
+rekisterointi.valtuudet.client-id=dummy
+rekisterointi.valtuudet.oauth-password=dummy
 
 varda-rekisterointi.url=http://localhost:9000/varda-rekisterointi/api/rekisterointi
 varda-rekisterointi.username=varda-rekisterointi
