--- a/rekisterointi/.github/workflows/build-service.yml
+++ b/rekisterointi/.github/workflows/build-service.yml
@@ -28,7 +28,7 @@ jobs:
           distribution: "adopt"
           cache: "maven"
       - name: Build
-        run: mvn clean package -Pci -B -Dbranch=$GITHUB_REF_NAME -Drevision=$GITHUB_SHA -DbuildNumber=$GITHUB_RUN_NUMBER/$GITHUB_RUN_ATTEMPT
+        run: mvn clean package -B -Dbranch=$GITHUB_REF_NAME -Drevision=$GITHUB_SHA -DbuildNumber=$GITHUB_RUN_NUMBER/$GITHUB_RUN_ATTEMPT
       - name: Upload rekisterointi-jar
         uses: actions/upload-artifact@v2
         with:
@@ -83,7 +83,7 @@ jobs:
         working-directory: rekisterointi-ui
       - name: Run playwright tests
         run: |
-          java -jar -Dspring.profiles.active=ci rekisterointi.jar &
+          java -jar -Dspring.profiles.active=dev rekisterointi.jar &
           cd mock-api
           npm install
           npm start &
