--- a/rekisterointi/.github/workflows/build-service.yml
+++ b/rekisterointi/.github/workflows/build-service.yml
@@ -21,11 +21,11 @@ jobs:
       - name: Build react app
         run: npm run build
         working-directory: rekisterointi-ui
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: "11"
-          distribution: "adopt"
+          java-version: "17"
+          distribution: "temurin"
           cache: "maven"
       - name: Build
         run: mvn clean package -B -Dbranch=$GITHUB_REF_NAME -Drevision=$GITHUB_SHA -DbuildNumber=$GITHUB_RUN_NUMBER/$GITHUB_RUN_ATTEMPT
@@ -40,10 +40,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: "17"
+          distribution: "temurin"
+          cache: "maven"
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
@@ -75,6 +77,12 @@ jobs:
           node-version: "18.x"
           cache: "npm"
           cache-dependency-path: rekisterointi-ui/package-lock.json
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: "17"
+          distribution: "temurin"
+          cache: "maven"
       - name: Install app dependencies
         run: npm ci
         working-directory: rekisterointi-ui
