--- a/rekisterointi/.github/workflows/npm-audit-alert.yml
+++ b/rekisterointi/.github/workflows/npm-audit-alert.yml
@@ -31,7 +31,7 @@ jobs:
           content="${content//'%'/'%25'}"
           content="${content//$'\n'/'%0A'}"
           content="${content//$'\r'/'%0D'}"
-          echo "::set-output name=content::$content"
+          echo "content=$content" >> "$GITHUB_OUTPUT"
           exit $result_code
         id: run_audit
         working-directory: rekisterointi-ui
