OH-970 refactor CAS authentication to use Opintopolku filter

--- a/rekisterointi/src/main/resources/rekisterointi_oph.properties
+++ b/rekisterointi/src/main/resources/rekisterointi_oph.properties
@@ -8,7 +8,7 @@ cas.base=${url-virkailija}/cas
 cas.login=${url-virkailija}/cas/login
 
 cas-oppija.url=${url-oppija}/cas-oppija
-cas-oppija.login=${cas-oppija.url}/login?service=$1&locale=$2
+cas-oppija.login=${cas-oppija.url}/login
 cas-oppija.logout=${cas-oppija.url}/logout?service=$1
 
 organisaatio-service.vtj.ytunnus=${url-virkailija}/organisaatio-service/rest/ytj/$1/v4
