--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -67,3 +67,5 @@ url-ytj=https://api.tietopalvelu.ytj.fi/yritystiedot.asmx
 
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
+
+feature.oh-973-poista-kriisiviestinnan-sahkopostiosoite=true
