OH-973 Set feature flag to enabled in tests

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -114,3 +114,4 @@ rajapinnat.ytj.avain=TEST
 
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
+feature.oh-973-poista-kriisiviestinnan-sahkopostiosoite=true
