--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -15,10 +15,10 @@
         "moment": "^2.29.4",
         "oph-urls-js": "github:Opetushallitus/oph-urls-js#master",
         "query-string": "^7.0.1",
-        "react": "16.13.1",
+        "react": "^16.14.0",
         "react-accessible-accordion": "3.3.3",
         "react-datepicker": "3.2.2",
-        "react-dom": "16.13.1",
+        "react-dom": "^16.14.0",
         "react-hook-form": "^7.8.4",
         "react-notifications-component": "^2.4.1",
         "react-router-dom": "5.2.0",
@@ -38,9 +38,9 @@
         "@types/enzyme": "^3.10.8",
         "@types/jest": "^26.0.0",
         "@types/node": "14.0.13",
-        "@types/react": "16.14.5",
+        "@types/react": "^16.14.5",
         "@types/react-datepicker": "2.11.1",
-        "@types/react-dom": "16.9.8",
+        "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "5.1.5",
         "@types/react-select": "^3.0.14",
         "@types/react-table": "^7.0.19",
