--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -12,7 +12,7 @@
         "joi": "^17.4.0",
         "joi-phone-number": "^5.1.1",
         "jotai": "^1.5.3",
-        "moment": "2.29.1",
+        "moment": "^2.29.4",
         "oph-urls-js": "github:Opetushallitus/oph-urls-js#master",
         "query-string": "^7.0.1",
         "react": "16.13.1",
@@ -175,7 +175,7 @@
         "report-dir": "cypress-coverage"
     },
     "engines": {
-        "npm": "8.15.0",
-        "node": "16.17.0"
+        "npm": "^8",
+        "node": "^16"
     }
 }
