--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -22,7 +22,7 @@
         "react-hook-form": "^7.8.4",
         "react-notifications-component": "^2.4.1",
         "react-router-dom": "5.2.0",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "^5.0.1",
         "react-table": "7.2.0",
         "reactjs-popup": "^2.0.5",
         "styled-components": "5.1.1",
@@ -36,7 +36,7 @@
         "@testing-library/react-hooks": "^7.0.2",
         "@testing-library/user-event": "7.2.1",
         "@types/enzyme": "^3.10.8",
-        "@types/jest": "^26.0.0",
+        "@types/jest": "^27",
         "@types/node": "14.0.13",
         "@types/react": "^16.14.5",
         "@types/react-datepicker": "2.11.1",
@@ -45,22 +45,23 @@
         "@types/react-select": "^3.0.14",
         "@types/react-table": "^7.0.19",
         "@types/styled-components": "4.4.0",
-        "@typescript-eslint/eslint-plugin": "4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
+        "@typescript-eslint/eslint-plugin": "^6.4.1",
+        "@typescript-eslint/parser": "^6.4.1",
         "concurrently": "^6.0.2",
         "cypress": "^9.1.1",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.6",
         "enzyme-to-json": "^3.6.2",
-        "eslint": "7.25.0",
+        "eslint": "^8.47.0",
         "eslint-plugin-cypress": "^2.12.1",
-        "eslint-plugin-jest": "24.1.3",
+        "eslint-plugin-jest": "^27",
+        "eslint-plugin-react": "^7",
         "finnish-business-ids": "^3.1.1",
         "husky": "^7.0.4",
         "jest-enzyme": "^7.1.2",
         "prettier": "2.2.1",
         "pretty-quick": "^3.1.2",
-        "typescript": "^4.2.4",
+        "typescript": "^4.9.5",
         "wait-on": "^6.0.0"
     },
     "scripts": {
@@ -84,71 +85,34 @@
         "cypress:ci": "wait-on http://localhost:3003/organisaatio-service && npm run cypress:run"
     },
     "eslintConfig": {
-        "extends": [
-            "react-app",
-            "plugin:cypress/recommended"
+        "parser": "@typescript-eslint/parser",
+        "plugins": [
+            "@typescript-eslint",
+            "cypress",
+            "jest",
+            "react"
         ],
-        "overrides": [
-            {
-                "files": [
-                    "src/**/*.ts",
-                    "src/**/*.tsx"
-                ],
-                "parser": "@typescript-eslint/parser",
-                "parserOptions": {
-                    "ecmaVersion": 2017,
-                    "sourceType": "module"
-                },
-                "plugins": [
-                    "@typescript-eslint/eslint-plugin"
-                ],
-                "rules": {
-                    "no-var": "error",
-                    "prefer-const": "error",
-                    "prefer-rest-params": "error",
-                    "prefer-spread": "error",
-                    "@typescript-eslint/no-explicit-any": "warn",
-                    "@typescript-eslint/array-type": "error",
-                    "@typescript-eslint/ban-types": "error",
-                    "@typescript-eslint/no-array-constructor": "error",
-                    "@typescript-eslint/no-empty-interface": "error",
-                    "@typescript-eslint/no-inferrable-types": "error",
-                    "@typescript-eslint/no-misused-new": "error",
-                    "@typescript-eslint/no-namespace": "error",
-                    "@typescript-eslint/no-non-null-assertion": "error",
-                    "@typescript-eslint/no-parameter-properties": "error",
-                    "no-unused-vars": "off",
-                    "@typescript-eslint/no-unused-vars": "error",
-                    "no-use-before-define": "off",
-                    "@typescript-eslint/no-use-before-define": "warn",
-                    "@typescript-eslint/prefer-namespace-keyword": "error"
-                },
-                "settings": {
-                    "import/extensions": [
-                        ".js",
-                        ".jsx",
-                        ".ts",
-                        ".tsx"
-                    ],
-                    "import/parsers": {
-                        "@typescript-eslint/parser": [
-                            ".ts",
-                            ".tsx"
-                        ]
-                    },
-                    "import/resolver": {
-                        "node": {
-                            "extensions": [
-                                ".js",
-                                ".jsx",
-                                ".ts",
-                                ".tsx"
-                            ]
-                        }
-                    }
-                }
-            }
-        ]
+        "extends": [
+            "eslint:recommended",
+            "plugin:@typescript-eslint/eslint-recommended",
+            "plugin:@typescript-eslint/recommended",
+            "plugin:react/recommended",
+            "plugin:cypress/recommended",
+            "plugin:jest/recommended"
+        ],
+        "rules": {
+            "jest/no-conditional-expect": "warn",
+            "jest/no-done-callback": "warn",
+            "no-extra-boolean-cast": "warn",
+            "no-prototype-builtins": "warn",
+            "react/display-name": "warn",
+            "react/prop-types": "warn",
+            "react/jsx-key": "warn",
+            "react/no-deprecated": "warn",
+            "@typescript-eslint/no-unused-vars": "warn",
+            "@typescript-eslint/no-explicit-any": "warn",
+            "@typescript-eslint/ban-ts-comment": "warn"
+        }
     },
     "proxy": "http://localhost:8080",
     "browserslist": {
