--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -29,6 +29,7 @@
         "universal-cookie": "4.0.4"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@cypress/code-coverage": "^3.9.11",
         "@cypress/instrument-cra": "^1.4.0",
         "@testing-library/jest-dom": "^5.14.1",
