--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,8 +88,68 @@ jobs:
           java -jar -Xms2g -Xmx2g -Dspring.config.location=classpath:application.properties,classpath:application-test-envs.properties -Dspring.profiles.active=dev -Dspring.flyway.enabled=true -Durl-virkailija=http://localhost:9000 -Dhost.virkailija=localhost:9000 -Durl-ytj=http://localhost:9000/ytj -Durl-oidservice=http://localhost:9000/oidservice -Dcas.service.organisaatio-service=http://localhost:8080/organisaatio-service-not-available organisaatio-service/build/libs/organisaatio-service.jar &
           cd organisaatio-ui && npm run cypress:ci
           kill $(jobs -p) || true
+  playwright:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_HOST_AUTH_METHOD: trust
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+      - name: Use node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.17.0"
+          cache: "npm"
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: "adopt"
+      - name: pre scripts
+        run: |
+          PGPASSWORD=postgres psql -c 'CREATE DATABASE organisaatio;' -h localhost -U postgres
+          cd mock-api && npm ci && cd -
+          cd organisaatio-ui && npm ci && cd -
+          cd playwright && npm ci && npx playwright install --with-deps && cd -
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Build backend with no tests
+        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+        with:
+          arguments: clean build -x test -x uiTest -x lint -x checkFormatting
+      - name:
+        run: |
+          cd mock-api && npm run mock-api &
+          cd organisaatio-ui && npm run start &
+          java -jar -Xms2g -Xmx2g -Dspring.config.location=classpath:application.properties,classpath:application-test-envs.properties -Dspring.profiles.active=dev -Dspring.flyway.enabled=true -Durl-virkailija=http://localhost:9000 -Dhost.virkailija=localhost:9000 -Durl-ytj=http://localhost:9000/ytj -Durl-oidservice=http://localhost:9000/oidservice -Dcas.service.organisaatio-service=http://localhost:8080/organisaatio-service-not-available organisaatio-service/build/libs/organisaatio-service.jar &
+          while ! nc -z localhost 3003; do
+            sleep 1; echo "Sleeping 3003"
+          done
+          while ! nc -z localhost 8080; do
+            sleep 1; echo "Sleeping 8080"
+          done
+          cd playwright && npx playwright test
+          kill $(jobs -p) || true
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright/playwright-report/
+          retention-days: 30
   sonarcloud:
-    needs: [cypress]
+    needs: [cypress, playwright]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
@@ -130,7 +190,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew build sonarqube
   deploy-container:
-    needs: [cypress, build]
+    needs: [cypress, build, playwright]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
@@ -155,7 +215,7 @@ jobs:
           ./ci-tools/github-build/build-fatjar.sh $ARTIFACT_NAME
           ./ci-tools/github-build/upload-image.sh $ARTIFACT_NAME
   deploy-artifacts:
-    needs: [build, cypress]
+    needs: [build, cypress, playwright]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
@@ -176,7 +236,7 @@ jobs:
         with:
           arguments: publish -PversionSuffix=.RELEASE
   deploy-artifacts-snapshot:
-    needs: [build, cypress]
+    needs: [build, cypress, playwright]
     if: github.ref != 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
