--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,6 +89,6 @@ jobs:
       - uses: actions/upload-artifact@v3
         if: always()
         with:
-          name: playwright/playwright-report
+          name: playwright-report
           path: playwright/playwright-report/
           retention-days: 30
