--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,10 @@ jobs:
           cd organisaatio-ui && npm run start &
           java -jar -Xms2g -Xmx2g -Dspring.config.location=classpath:application.properties,classpath:application-test-envs.properties -Dspring.profiles.active=dev -Dspring.flyway.enabled=true -Durl-virkailija=http://localhost:9000 -Dhost.virkailija=localhost:9000 -Durl-ytj=http://localhost:9000/ytj -Durl-oidservice=http://localhost:9000/oidservice -Dcas.service.organisaatio-service=http://localhost:8080/organisaatio-service-not-available organisaatio-service/build/libs/organisaatio-service.jar &
           while ! nc -z localhost 3003; do
-            sleep 1; echo "Sleeping"
+            sleep 1; echo "Sleeping 3003"
+          done
+          while ! nc -z localhost 8080; do
+            sleep 1; echo "Sleeping 8080"
           done
           cd playwright && npx playwright test
           kill $(jobs -p) || true
