remove enzyme and @testing-library tests

--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -32,16 +32,11 @@
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@cypress/code-coverage": "^3.12.1",
         "@cypress/instrument-cra": "^1.4.0",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/react-hooks": "^7.0.2",
-        "@testing-library/user-event": "7.2.1",
-        "@types/enzyme": "^3.10.8",
         "@types/jest": "^27",
-        "@types/node": "14.0.13",
-        "@types/react": "^16.14.5",
+        "@types/node": "^16.18.54",
+        "@types/react": "^16.14.47",
         "@types/react-datepicker": "2.11.1",
-        "@types/react-dom": "^16.9.8",
+        "@types/react-dom": "^16.9.20",
         "@types/react-router-dom": "5.1.5",
         "@types/react-select": "^3.0.14",
         "@types/react-table": "^7.0.19",
@@ -50,16 +45,12 @@
         "@typescript-eslint/parser": "^6.4.1",
         "concurrently": "^6.0.2",
         "cypress": "^10.11.0",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.6",
-        "enzyme-to-json": "^3.6.2",
         "eslint": "^8.47.0",
         "eslint-plugin-cypress": "^2.12.1",
         "eslint-plugin-jest": "^27",
         "eslint-plugin-react": "^7",
         "finnish-business-ids": "^3.1.1",
         "husky": "^7.0.4",
-        "jest-enzyme": "^7.1.2",
         "prettier": "2.2.1",
         "pretty-quick": "^3.1.2",
         "typescript": "^4.9.5",
@@ -73,7 +64,6 @@
         "stop": "killall -SIGINT organisaatioApp",
         "build": "CI='' react-scripts build",
         "test": "react-scripts test --coverage --watchAll=false",
-        "updateSnaps": "react-scripts test --coverage --updateSnapshot --watchAll=false",
         "eject": "react-scripts eject",
         "lint": "tsc --noEmit && eslint --ext .ts,.tsx src",
         "lint:fix": "eslint --ext .ts,.tsx src --fix",
@@ -107,16 +97,12 @@
             }
         },
         "rules": {
-            "jest/no-conditional-expect": "warn",
-            "jest/no-done-callback": "warn",
             "no-prototype-builtins": "warn",
-            "react/display-name": "warn",
             "react/prop-types": "warn",
             "react/jsx-key": "warn",
             "react/no-deprecated": "warn",
             "@typescript-eslint/no-unused-vars": "warn",
-            "@typescript-eslint/no-explicit-any": "warn",
-            "@typescript-eslint/ban-ts-comment": "warn"
+            "@typescript-eslint/no-explicit-any": "warn"
         }
     },
     "proxy": "http://localhost:8080",
