OSTJ-193 Add feature flag for osoitepalvelu and enable in test environments

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -65,5 +65,7 @@ ryhmasahkoposti.service.email=
 url-virkailija=https://${host.virkailija}
 url-ytj=https://api.tietopalvelu.ytj.fi/yritystiedot.asmx
 
+feature.ostj-182-uusi-osoitepalvelu=true
+
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
