OSTJ-193 Set feature flag to enabled in tests

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -112,5 +112,7 @@ dev.password=password
 rajapinnat.ytj.asiakastunnus=TEST
 rajapinnat.ytj.avain=TEST
 
+feature.ostj-182-uusi-osoitepalvelu=true
+
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
