--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -98,12 +98,12 @@
             }
         },
         "rules": {
-            "no-prototype-builtins": "warn",
-            "react/prop-types": "warn",
-            "react/jsx-key": "warn",
-            "react/no-deprecated": "warn",
-            "@typescript-eslint/no-unused-vars": "warn",
-            "@typescript-eslint/no-explicit-any": "warn"
+            "@typescript-eslint/no-unused-vars": [
+                "error",
+                {
+                    "ignoreRestSiblings": true
+                }
+            ]
         }
     },
     "proxy": "http://localhost:8080",
