OSTJ-193 Allow searching koulutustoimijat by oppilaitostyyppi
UI currently allows only selecting ammattikorkeakoulu or none

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -7,6 +7,7 @@ port.postgresql=5432
 rajapinnat.ytj.asiakastunnus=YTJ_ASIAKASTUNNUS_UNKNOWN
 rajapinnat.ytj.avain=YTJ_SALAINEN_AVAIN_UNKNOWN
 server.name=hostname
+server.tomcat.relaxed-query-chars=[,]
 
 
 auth.mode=cas
