--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -38,6 +38,7 @@
         "@types/react": "^16.14.47",
         "@types/react-datepicker": "2.11.1",
         "@types/react-dom": "^16.9.20",
+        "@types/react-notifications-component": "^3.1.2",
         "@types/react-router-dom": "5.1.5",
         "@types/react-select": "^3.0.14",
         "@types/react-table": "^7.0.19",
