OSTJ-193 Fetch maakunta/kunta relations from koodistopavelu
* Mock koodisto api locally
* Trigger koodisto import manually before playwright tests

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -54,8 +54,11 @@ host.virkailija=localhost:9000
 organisaatio.serviceuser.oid=1.2.246.562.24.47727091944
 organisaatio.service.username=xxx
 organisaatio.service.password=xxx
+
+koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodisto-service
 organisaatio.service.username.to.koodisto=
 organisaatio.service.password.to.koodisto=
+
 organisaatio-service.scheduled.update.cron.expression= 0 0 0 * * ?
 organisaatio.service.username.to.viestinta=
 organisaatio.service.password.to.viestinta=
@@ -68,6 +71,7 @@ ryhmasahkoposti.service.email=
 url-virkailija=https://${host.virkailija}
 url-ytj=https://api.tietopalvelu.ytj.fi/yritystiedot.asmx
 
+feature.mockapi=true
 feature.ostj-182-uusi-osoitepalvelu=true
 
 aws.sns.lakkautusTopicArn=undefined
