--- a/organisaatio-service/src/main/resources/config/sade.yml
+++ b/organisaatio-service/src/main/resources/config/sade.yml
@@ -1,1 +1,4 @@
+feature.mockapi: false
 feature.ostj-182-uusi-osoitepalvelu: false
+
+koodisto.baseurl: "https://${host.virkailija}/koodisto-service"
