--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -121,6 +121,7 @@ dev.password=password
 rajapinnat.ytj.asiakastunnus=TEST
 rajapinnat.ytj.avain=TEST
 
+feature.mockapi=true
 feature.ostj-182-uusi-osoitepalvelu=true
 
 aws.sns.lakkautusTopicArn=undefined
