OSTJ-193 Sijainti filter
* Make search function a POST resource as the request size becomes too large with kunta selections

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -53,8 +53,11 @@ organisaatio-service.koodisto-service.rest.url=https://localhost:8503/koodisto-s
 organisaatio.serviceuser.oid=1.2.246.562.24.47727091944
 organisaatio.service.username=username
 organisaatio.service.password=password
+
+koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodisto-service
 organisaatio.service.username.to.koodisto=username
 organisaatio.service.password.to.koodisto=password
+
 organisaatio-service.scheduled.update.cron.expression=0 0 0-6/1 * * ?
 
 organisaatio.service.username.to.viestinta=username
