OSTJ-193 Tell db-scheduler to wait for Spring context to be ready before starting tasks as locally FetchKoodistotTask relies on mock API provided by our own application

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -71,6 +71,8 @@ ryhmasahkoposti.service.email=
 url-virkailija=https://${host.virkailija}
 url-ytj=https://api.tietopalvelu.ytj.fi/yritystiedot.asmx
 
+db-scheduler.delay-startup-until-context-ready=true
+
 feature.mockapi=true
 feature.ostj-182-uusi-osoitepalvelu=true
 
