OSTJ-193 Fetch organisaatio koulutusluvat from Oiva

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -58,6 +58,10 @@ koodisto.baseurl=http://localhost:${server.port}/organisaatio-service/mock/koodi
 organisaatio.service.username.to.koodisto=username
 organisaatio.service.password.to.koodisto=password
 
+oiva.baseurl=http://localhost:${server.port}/organisaatio-service/mock/oiva
+oiva.username=oivausername
+oiva.password=oivapassword
+
 organisaatio-service.scheduled.update.cron.expression=0 0 0-6/1 * * ?
 
 organisaatio.service.username.to.viestinta=username
