--- a/src/main/resources/oph-configuration/organisaatio.properties.template
+++ b/src/main/resources/oph-configuration/organisaatio.properties.template
@@ -95,3 +95,7 @@ web.url.cas=https\://${host.cas}/cas
 organisaatio-service.tarjonta-service.rest.url=https://${host.virkailija}:${port.tarjonta-service}/tarjonta-service/rest
 organisaatio-service.koodisto-service.rest.url=https://${host.virkailija}/koodisto-service
 organisaatio-service.ryhmasahkoposti-service.rest.url=https://${host.virkailija}/ryhmasahkoposti-service
+
+oiva.baseurl={{ organisaatio_oiva_baseurl }}
+oiva.username={{ organisaatio_oiva_username }}
+oiva.password={{ organisaatio_oiva_password }}
